Added Role based authentication